--- a/ASSIGNMENT2/css/styles.css
+++ b/ASSIGNMENT2/css/styles.css
@@ -1,252 +1,198 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  width: 1170px;
-  font-family: "Heebo";
-  margin-left: auto;
-  margin-right: auto;
+  font-family: "Heebo", sans-serif;
+  padding: 40px;
 }
 
 .navMenu {
-  height: 43px;
-  padding-left: 70%;
-  margin: 27px auto;
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0;
 }
 
 a {
-  font-size: 23px;
+  font-size: 1.3rem;
   text-decoration: none;
   color: black;
-  font-weight: bolder;
+  font-weight: bold;
 }
 
 .navItems {
-  height: 43px;
-  list-style-type: none;
+  list-style: none;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  gap: 20px;
   align-items: center;
 }
 
 .mainContainer {
-  margin: 148px;
   display: flex;
-  justify-content: space-around;
-  gap: 150px;
+  justify-content: space-between;
+  gap: 50px;
+  margin: 100px 0;
 }
+
 .firstItem {
-  margin-bottom: 50px;
-  height: 105px;
-  width: 506px;
-  font-size: 44px;
+  font-size: 2.5rem;
   font-weight: bold;
-  line-height: 60px;
+  line-height: 1.4;
 }
+
 .secondItem {
-  margin-bottom: 40px;
-  height: 66px;
-  width: 497px;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #555;
 }
 
 .btn {
   background-color: #ff6464;
-  color: #ffffff;
-  width: 208px;
-  height: 47px;
-  font-weight: 500px;
-  font-size: 20px;
-  border-radius: 2px;
-  line-height: 29px;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 500;
   border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .btn:hover {
   background-color: #c52d2d;
-  cursor: pointer;
 }
 
 .profilePic {
-  width: 243px;
-  height: 243px;
-  margin: 0 auto;
+  width: 100%;
+  max-width: 240px;
   border-radius: 50%;
   box-shadow: -6px 4px 2px #edf7fa;
 }
 
 .postContainer {
-  align-content: center;
-  height: 396px;
   background-color: #edf7fa;
-  padding-right: 18%;
+  padding: 40px 5%;
 }
+
 .cards {
   display: flex;
-  justify-content: space-around;
-  padding-left: 148px;
   gap: 20px;
+  justify-content: center;
 }
-.cardItem {
-  padding-top: 15px;
-  padding-left: 22px;
 
-  width: 418px;
-  height: 295px;
-  background-color: #ffffff;
+.cardItem {
+  background-color: #fff;
   border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  flex: 1;
 }
 
 .postItems {
-  padding-left: 15%;
-  padding-right: 2%;
-  width: auto;
-  height: 60px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  list-style-type: none;
-  font-size: 22px;
+  align-items: center;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
 }
 
 .viewAll {
   text-decoration: underline;
   color: #00a8cc;
-  font-size: 16px;
+  font-size: 1rem;
 }
+
 .cardTitle {
-  font-size: 26px;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .dateCategory {
-  margin: 20px auto;
-  font-size: 18px;
+  font-size: 0.9rem;
+  color: #777;
+  margin-bottom: 10px;
 }
 
 .cardInfo {
-  padding-top: 30px;
-  font-size: 16px;
+  font-size: 0.9rem;
+  color: #555;
 }
 
 .workContainer {
-  margin-left: 148px;
-  margin-right: 148px;
-  width: auto;
+  padding: 20px 0;
 }
 
 .workContainerTitle {
-  margin-top: 30px;
-
-  font-size: 22px;
-  font-weight: 400px;
-  margin-bottom: 40px;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
 }
 
 .workCard {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: 10px;
+  gap: 20px;
   border-bottom: 1px solid #e0e0e0;
-
-  margin-bottom: 20px;
+  padding: 20px 0;
 }
+
 .img2 {
-  width: 246px;
-  height: 180px;
+  width: 100%;
+  max-width: 240px;
   border-radius: 6px;
 }
 
 .categoryItem {
-  align-items: center;
-  margin-top: 15px;
   display: flex;
-  gap: 26px;
-
-  list-style-type: none;
-}
-
-.workCardHeading {
-  font-size: 30px;
-}
-
-.workCardInfo {
-  margin-top: 40px;
-  font-size: 16px;
-  margin-bottom: 20px;
+  gap: 10px;
+  list-style: none;
 }
 
 .item1 {
-  height: 25px;
-  width: 63px;
-  border-radius: calc(25px / 2);
   background-color: #142850;
   color: #fff;
-  font-size: 18px;
-  text-align: center;
+  font-size: 0.9rem;
   font-weight: 900;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 15px;
 }
 
 .item2 {
-  font-size: 20px;
+  font-size: 1rem;
   color: #8695a4;
 }
 
+.workCardHeading {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.workCardInfo {
+  font-size: 0.9rem;
+  color: #555;
+  margin-top: 10px;
+}
+
 footer {
-  margin-top: 83px;
-  height: 182px;
-}
-footer .footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer .footer li {
-  list-style-type: none;
-  margin: 0 calc(35px / 2);
-}
-
-footer .footer img {
-  height: 30px;
-  width: 30px;
-}
-
-footer p {
+  padding: 40px 0;
   text-align: center;
 }
 
-.cpyRight {
-  margin-top: 26px;
+.footer {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
-@media (max-width: 768px) {
-  body {
-    width: 100%;
-  }
-  .navMenu {
-    padding-left: 50%;
-  }
-  .mainContainer {
-    align-items: center;
-    margin: 74px;
-    flex-direction: column-reverse;
-  }
-  .cards {
-    flex-direction: column;
-    padding-left: 0;
-    gap: 30px;
-  }
-  .cardItem {
-    width: 100%;
-  }
-  .workContainer {
-    margin: 20px;
-  }
-  .workCard {
-    flex-direction: column;
-    gap: 15px;
-  }
+.footer img {
+  width: 30px;
+}
+
+.cpyRight {
+  font-size: 0.9rem;
+  color: #777;
 }
