--- a/ASSIGNMENT2/css/styles.css
+++ b/ASSIGNMENT2/css/styles.css
@@ -6,46 +6,63 @@
 
 body {
   font-family: "Heebo", sans-serif;
-  padding: 40px;
 }
 
 .navMenu {
   display: flex;
   justify-content: flex-end;
-  margin: 20px 0;
 }
 
 a {
-  font-size: 1.3rem;
+  font-size: 21px;
   text-decoration: none;
   color: black;
   font-weight: bold;
 }
 
+a:hover {
+  box-shadow: 0 0 5px 3px red;
+}
+
+.navBar {
+  display: flex;
+  padding-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 144px;
+  padding-left: 144px;
+}
+
 .navItems {
+  font-size: 20px;
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 33px;
   align-items: center;
+  line-height: 30px;
 }
 
 .mainContainer {
   display: flex;
   justify-content: space-between;
-  gap: 50px;
-  margin: 100px 0;
+  margin: 250px auto;
+  padding-left: 140px;
+  padding-right: 140px;
 }
 
 .firstItem {
-  font-size: 2.5rem;
+  font-size: 44px;
   font-weight: bold;
-  line-height: 1.4;
+  line-height: 60px;
 }
 
 .secondItem {
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #555;
+  width: 60%;
+  padding-top: 40px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #21243d;
+  padding-bottom: 40px;
 }
 
 .btn {
@@ -64,14 +81,20 @@ a {
   background-color: #c52d2d;
 }
 
+.imgContainer {
+  width: 400px;
+}
+
 .profilePic {
   width: 100%;
-  max-width: 240px;
+  max-width: 300px;
   border-radius: 50%;
   box-shadow: -6px 4px 2px #edf7fa;
 }
 
 .postContainer {
+  padding-right: 0px;
+  padding-left: 0px;
   background-color: #edf7fa;
   padding: 40px 5%;
 }
@@ -90,12 +113,17 @@ a {
   flex: 1;
 }
 
+.cardItem:hover {
+  border: 2px solid#142850;
+}
+
 .postItems {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-size: 1.1rem;
   margin-bottom: 20px;
+  list-style-type: none;
 }
 
 .viewAll {
@@ -122,7 +150,9 @@ a {
 }
 
 .workContainer {
-  padding: 20px 0;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 30px;
 }
 
 .workContainerTitle {
@@ -133,6 +163,7 @@ a {
 .workCard {
   display: flex;
   gap: 20px;
+  align-items: center;
   border-bottom: 1px solid #e0e0e0;
   padding: 20px 0;
 }
@@ -146,6 +177,7 @@ a {
 .categoryItem {
   display: flex;
   gap: 10px;
+  align-items: center;
   list-style: none;
 }
 
@@ -186,6 +218,7 @@ footer {
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
+  list-style-type: none;
 }
 
 .footer img {
