--- a/ASSIGNMENT2/css/styles.css
+++ b/ASSIGNMENT2/css/styles.css
@@ -121,7 +121,7 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.1rem;
+  font-size: 21px;
   margin-bottom: 20px;
   list-style-type: none;
 }
@@ -129,23 +129,23 @@ a:hover {
 .viewAll {
   text-decoration: underline;
   color: #00a8cc;
-  font-size: 1rem;
+  font-size: 20px;
 }
 
 .cardTitle {
-  font-size: 1.3rem;
+  font-size: 23px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .dateCategory {
-  font-size: 0.9rem;
+  font-size: 16px;
   color: #777;
   margin-bottom: 10px;
 }
 
 .cardInfo {
-  font-size: 0.9rem;
+  font-size: 16px;
   color: #555;
 }
 
@@ -156,7 +156,7 @@ a:hover {
 }
 
 .workContainerTitle {
-  font-size: 1.5rem;
+  font-size: 25px;
   margin-bottom: 20px;
 }
 
@@ -184,7 +184,7 @@ a:hover {
 .item1 {
   background-color: #142850;
   color: #fff;
-  font-size: 0.9rem;
+  font-size: 16px;
   font-weight: 900;
   text-align: center;
   padding: 5px 10px;
@@ -192,18 +192,18 @@ a:hover {
 }
 
 .item2 {
-  font-size: 1rem;
+  font-size: 16px;
   color: #8695a4;
 }
 
 .workCardHeading {
-  font-size: 1.4rem;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .workCardInfo {
-  font-size: 0.9rem;
+  font-size: 16px;
   color: #555;
   margin-top: 10px;
 }
@@ -219,6 +219,7 @@ footer {
   gap: 20px;
   margin-bottom: 20px;
   list-style-type: none;
+  align-items: center;
 }
 
 .footer img {
@@ -226,6 +227,6 @@ footer {
 }
 
 .cpyRight {
-  font-size: 0.9rem;
+  font-size: 16px;
   color: #777;
 }
