--- a/ASSIGNMENT2/css/styles.css
+++ b/ASSIGNMENT2/css/styles.css
@@ -204,6 +204,10 @@ a {
   border-radius: 12px;
 }
 
+.yearSpan {
+  align-items: center;
+}
+
 .card p {
   font-weight: 400px;
   font-size: 16px;
@@ -315,5 +319,9 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .yearSpan {
+    align-content: center;
   }
 }
