--- a/ASSIGNMENT4/css/style.css
+++ b/ASSIGNMENT4/css/style.css
@@ -92,21 +92,23 @@ a {
   height: 100vh;
   position: relative;
   height: calc(100vh-56px);
+  align-items: center;
 }
 
 .leftBanner {
-  padding-top: 207px;
-  padding-left: 218px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  width: 52%;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(
     89.61deg,
-    #422a3c 55.75%,
-    rgba(66, 42, 60, 0.85) 66.03%,
-    rgba(66, 42, 60, 0.8) 75.96%,
-    rgba(66, 42, 60, 0.31) 84.81%,
-    rgba(66, 42, 60, 0) 99.7%
+    #422a3c 40%,
+    rgba(66, 42, 60, 0.85) 50%,
+    rgba(66, 42, 60, 0.8) 60%,
+    rgba(66, 42, 60, 0.31) 70%,
+    rgba(66, 42, 60, 0) 80%
   );
 }
 
@@ -128,12 +130,13 @@ a {
 }
 
 .Container {
-  margin: auto;
-  min-width: 949px;
+  width: 949px;
+  height: 491px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   gap: 66px;
+  position: absolute;
 }
 
 .logoContent {
@@ -174,7 +177,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-width: 307px;
+  min-width: 80%;
   min-height: 88px;
   gap: 14px;
 }
@@ -205,6 +208,7 @@ input {
 }
 
 form {
+  min-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -643,9 +647,25 @@ h5 {
 
 /* Responsive Scaling */
 @media (max-width: 768px) {
+  body {
+    align-content: center;
+  }
+  .Container {
+    align-items: center;
+  }
   form {
     flex-direction: column;
     align-items: center;
+  }
+  .formSection {
+    width: 70%;
+  }
+  .serviceCards {
+    display: block;
+  }
+
+  .subForm {
+    min-width: 100%;
   }
 
   input {
@@ -656,7 +676,13 @@ h5 {
     gap: 10px;
   }
 
+  .serviceName {
+    justify-content: center;
+    min-width: 50%;
+  }
+
   .sliderCard {
+    flex-direction: column;
     min-width: 150px;
   }
 
@@ -672,5 +698,22 @@ h5 {
 
   .cardTitle {
     font-size: 16px;
+  }
+
+  .comments {
+    align-items: center;
+  }
+
+  .comment {
+    max-width: 80%;
+  }
+
+  .commentInfo {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .navMenuItems ul {
+    display: none;
   }
 }
